0.1.5
- Code colorization by byte value
- Added File/Open File as Hex action
- Added options panel / dialog

0.1.4 (2017-01-08)
- Fixed charset for clipboard copy/paste
- Added status panel
- Added go-to position dialog
- Added crude search panel
- Adding charset now support basic filtering
- Enabled delta mode, switchable to memory mode
- Most settings are now persistent

0.1.3 (2016-10-05)
- Full cursor shape and cursor blinking
- Support for horizontal position offset
- Fixed NPE on Windows 7 (Bug 267973)

0.1.2 (2016-07-23)
- Added copy as code and paste from code
- Fixed opening of .shadow files
- Fixed clipboard related IllegalStateException issue
- Improved plugin description

0.1.1 (2016-06-25)
- Added binary, decimal and octal mode
- Partially fixed "Open as Hex" menu item position
- Slightly improved rendering performance

0.1.0 (2016-06-08)
- Released
